--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   firebase_auth: ^4.17.6
   firebase_core: ^2.25.5
   google_sign_in: ^6.2.1
+  fl_chart: ^0.66.2
+  font_awesome_flutter: ^10.7.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
